# latent-communication-for-multi-trajectory-data-analysis-agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: tier2_phase4_lite.ipynb  tier2_short_gate.ipynb
reports/: phase4_writeup.md  phase4a_findings.md
scripts/: check_env.py  import_tier2_results.py  latent_hidden_smoke.py  latent_tool_roundtrip.py  latentmas_upstream_smoke.py  package_cloud.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_tier2_full_sweep.py  run_tier2_gate.py  run_tier2_phase4.py  smoke_generate.py  write_phase4a_findings.py
src/latent_agent/: __init__.py  agents.py  cloud.py  code_quality.py  executor.py  horizon_tasks.py  latent_backend.py  metrics.py  models.py  runtime.py  tasks.py  token_split.py
tests/: test_code_quality.py  test_latent_backend.py  test_latent_repair_strategy.py  test_phase3_horizon.py  test_phase4_lite.py  test_tasks_and_executor.py  test_tier2_cloud.py  test_tier2_full_sweep.py  test_token_split.py
